<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_tl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_tl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_customer_first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_tl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_tl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_amount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pay"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/pay_with_mula"
        app:icon="@drawable/ic_android_black_24dp" />

</LinearLayout>